[gd_scene load_steps=2 format=3 uid="uid://brao4oyh1oqjn"]

[ext_resource type="Script" uid="uid://chtjk8c5vawlu" path="res://script/components/health_component.gd" id="1_uw852"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_uw852")

[connection signal="health_reached_zero" from="." to="." method="_on_health_reached_zero"]
